--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,16 @@
     </properties>
 
     <dependencies>
-        <!--Spring Boot Web Starter-->
+        <!--Spring Boot Starter-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <!--Spring Boot Web Starter-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <!--Spring Security-->
